o Moved dependencies needed for JDK 1.5 to jdk15 profile.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-logging/trunk@421 aee2edba-5628-49ba-b8b8-0e9d4ac63d57